# guratan

./: 0117.txt  0122.txt  cocos2dx_4.x導入.txt  font_c.vssettings  redmine.txt  やること_0130.txt  メモ.txt  ｗ.txt
myGame/: CMakeLists.txt
myGame/Classes/: AnimMng.cpp  AnimMng.h  AppDelegate.cpp  Bar.cpp  Bar.h  CricketJni.cpp  CricketJni.h  DamageText.cpp  DamageText.h  E_Attack.cpp  E_Attack.h  FloorMng.cpp  FloorMng.h  GameClearScene.cpp  GameClearScene.h  GameMap.cpp  GameMap.h  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  LoadingScene.cpp  LoadingScene.h  SoundMng.cpp  SoundMng.h  TitleScene.cpp  TitleScene.h  Weapon.cpp  Weapon.h  mapObject.cpp  mapObject.h
myGame/Classes/UI/: Bar.cpp  DamageText.cpp
myGame/Classes/Unit/: Enemy.cpp  Enemy.h  Obj.cpp  Obj.h  Player.cpp  Player.h
myGame/Classes/action/: ActionMng.cpp  ActionMng.h  Attack.cpp  Attack.h  ChangeDIR.cpp  ChangeDIR.h  ChangeLR.cpp  ChangeLR.h  CheckCtr.cpp  CheckCtr.h  CheckKey.cpp  CheckKey.h  CheckList.cpp  CheckList.h  Colision.cpp  Colision.h  Move.cpp  Move.h  Shot.cpp  Shot.h
myGame/Classes/input/: OPRT_key.cpp  OPRT_key.h  OPRT_state.cpp  OPRT_state.h  OPRT_touch.cpp  OPRT_touch.h
myGame/Classes/scene/: GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  LoadingScene.cpp  LoadingScene.h  TitleScene.cpp  TitleScene.h
myGame/Resources/: sounds.ckbx
myGame/Resources/image/player/idle/: desktop.ini
myGame/Resources/map/: map1.tmx  map2.tmx  tileset.tsx
myGame/Resources/plist/charge/: charge-base.plist
myGame/Resources/plist/e_attack/: e_attack-fire.plist
myGame/Resources/plist/orb/: orb-idle.plist
myGame/Resources/plist/player/: player-attackB.plist  player-attackF.plist  player-attackL.plist  player-attackR.plist  player-idleB.plist  player-idleF.plist  player-idleL.plist  player-idleR.plist  player-runB.plist  player-runF.plist  player-runL.plist  player-runR.plist  player-twistB.plist
myGame/Resources/plist/skeleton/: skeleton-runB.plist  skeleton-runF.plist  skeleton-runR.plist
myGame/Resources/plist/slime/: slime-runB.plist  slime-runF.plist  slime-runR.plist
myGame/Resources/plist/weapon/: weapon-twist.plist
myGame/proj.android/app/res/values/: appicon1_background.xml
myGame/proj.win32/: MenuLayer.cpp  MenuLayer.h  MyGame.sln  MyGame.vcxproj  MyGame.vcxproj.filters  RCa11076
myGame/proj.win32/_debug/: _DebugConOut.h  _DebugDispOut.cpp  _DebugDispOut.h
